# odoo-xmlrpc-auth

./: .gitignore  README.md  install.sh  odoo-xmlrpc-auth.py  pyproject.toml  uninstall.sh  update.sh
src/odoo_xmlrpc_auth/: __init__.py  cli.py  client.py  config.py
